fix product title wrapping

--- a/backend/frontend/static/css/product_description.css
+++ b/backend/frontend/static/css/product_description.css
@@ -1,6 +1,7 @@
 /* title */
 h1.product-title {
     font-size: 28px;
+    word-wrap: break-word
 }
 
 span.category-badge {
